add persistent scroll indicator

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/gs-akhan/react-native-chooser#readme",
   "peerDependencies": {
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.5.10",
+    "react-native-scroll-indicator": "^0.1.0"
   },
   "devDependencies": {
     "react": "16.0.0-alpha.12",
